--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dog Dodoi</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
 
 </head>
 <body>
